# sekiro

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  main.go  sekiro.toml
.devcontainer/: Dockerfile  devcontainer.json  initializeCommand.sh  postCreateCommand.sh
cmd/: BUILD.bazel  configure.go  root.go  setup.go
internal/: BUILD.bazel  install.go
internal/aws/: BUILD.bazel
internal/bubbletea/: BUILD.bazel  model.go
tools/: BUILD.bazel
