load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix dev.machanirobotics/sekiro
gazelle(
    name = "gazelle",
)

go_library(
    name = "sekiro_lib",
    srcs = ["main.go"],
    importpath = "dev.machanirobotics/sekiro",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)

go_binary(
    name = "sekiro",
    embed = [":sekiro_lib"],
    visibility = ["//visibility:public"],
)
