""" Module for Project Sekiro """

module(
    name = "sekiro",
    version = "0.1.0",
    compatibility_level = 1,
)

bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)

bazel_dep(name = "toolchains_llvm", version = "0.10.3")

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "16.0.0",
)
use_repo(llvm, "llvm_toolchain")

bazel_dep(name = "rules_go", version = "0.43.0")
bazel_dep(name = "gazelle", version = "0.34.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.21.4")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_spf13_cobra")

register_toolchains("@llvm_toolchain//:all")
