load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "config.go",
        "root.go",
        "setup.go",
    ],
    importpath = "dev.machanirobotics/sekiro/cmd",
    visibility = ["//visibility:public"],
    deps = ["@com_github_spf13_cobra//:go_default_library"],
)
