load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "internal",
    srcs = [
        "file.go",
        "file_generator.go",
        "file_verify.go",
        "project_init.go",
        "project_setup.go",
    ],
    importpath = "dev.machanirobotics/sekiro/internal",
    visibility = ["//:__subpackages__"],
)
